Replace static date with dynamic placeholder

--- a/templates/urgent_alert.html
+++ b/templates/urgent_alert.html
@@ -27,7 +27,7 @@
           </tr>
           <tr>
             <td align="center" style="padding-top: 12px;">
-              <p style="margin: 0; font-size: 15px; opacity: 0.95; color: white;">October 17, 2025</p>
+              <p style="margin: 0; font-size: 15px; opacity: 0.95; color: white;">{{ date }}</p>
             </td>
           </tr>
         </table>
